Fix: Workaround for horizontal scrollbar appearing due to URL text

--- a/plugin/src/main/resources/template/layout.css
+++ b/plugin/src/main/resources/template/layout.css
@@ -2,6 +2,9 @@ body {
 color: #4c4a40;
 font-size: 87.5%;
 }
+a {
+word-wrap: break-word;
+}
 .header, .library {
 margin: 1em 0;
 padding: 0 0.5em;
